--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.1.5"
 djangorestframework = "^3.15.2"
+python-dotenv = "^1.0.1"
+psycopg2-binary = "^2.9.10"
 
 
 [build-system]
