--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1.5"
 djangorestframework = "^3.15.2"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
+drf-yasg = "^1.21.8"
 
 
 [build-system]
