--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ djangorestframework = "^3.15.2"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
 drf-yasg = "^1.21.8"
+celery = "^5.4.0"
+django-celery-beat = "^2.7.0"
+redis = "^5.2.1"
+python-telegram-bot = "^21.10"
 
 
 [build-system]
