--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ celery = "^5.4.0"
 django-celery-beat = "^2.7.0"
 redis = "^5.2.1"
 python-telegram-bot = "^21.10"
+black = "^24.10.0"
 
 
 [build-system]
